# ChangeLog for dev-util/glimmer
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/dev-util/glimmer/Attic/ChangeLog,v 1.4 2002/08/11 19:27:35 styx Exp $

*glimmer-1.2.1-r2 (11 Aug 2002)
  11 Aug 2002; Joachim Blaabjerg <styx@gentoo.org> glimmer-1.2.1-r2.ebuild :
  Fixed a few compilation/installation errors, as well as a sandbox violation.

*glimmer-1.2.1-r1 (04 Jul 2002)
  04 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> glimmer-1.2.1-r1.ebuild :
  Updated dependencies. Corrected the gnome-vfs dep to match with the Gnome1
  version. 

*glimmer-1.2.1 (3 June 2002)
  3 June 2002; Gabriele Giorgetti <stroke@gentoo.org> glimmer-1.2.1.ebuild :
  New version. SLOT and LICENSE have been added to the ebuild. 

*glimmer-1.1.9.1-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.